--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                  num.value = 1 / num.value;
 			}
                         function sine() {
-				var num= documnet.getElementById("n1");
+				var num= document.getElementById("n1");
 				num.value = Math.sin(num.value);
                         }
 		</script>
